# smelly

./: .editorconfig  .gitattributes  .gitignore  .ignore  CHANGELOG.rst  CONTRIBUTING.md  INSTALL.md  Makefile  README.asciidoc  SECURITY.md  __main__.c  __main__.py  build-terminfo  count-lines-of-code  ehrm.sh  gen-apc-parsers.py  gen-config.py  gen-go-code.py  gen-key-constants.py  gen-srgb-lut.py  gen-wcwidth.py  go.mod  package.json  publish.py  pyproject.toml  session.vim  setup.old  setup.py  shell.nix  test.c  test.py  tmpfix.sh  update-on-ox  update-on-ubuntu
.github/: FUNDING.yml
automagic_rest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bypy/: init_env.py  macos.conf  rsync.conf  site.c  site.py
docs/: Makefile  actions.rst  basic.rst  binary.rst  build.rst  changelog.rst  clipboard.rst  color-stack.rst  conf.py  conf.rst  deccara.rst  desktop-notifications.rst  extract-rst-targets.py  faq.rst  glossary.rst  graphics-protocol.rst  index.rst  installer.sh  integrations.rst  invocation.rst  keyboard-protocol.rst  kittens_intro.rst  launch.rst  layouts.rst  marks.rst  open_actions.rst  overview.rst  performance.rst  pipe.rst  press-mentions.rst  protocol-extensions.rst  quickstart.rst  rc_protocol.rst  remote-control.rst  shell-integration.rst  support.html  support.rst  underlines.rst
glad/: generate.c  generate.py
glfw/: __init__.c  backend_utils.c  backend_utils.h  cocoa_init.m  cocoa_window.m  dbus_glfw.c  dbus_glfw.h  egl_context.c  glfw.py  ibus_glfw.c  ibus_glfw.h  input.c  internal.h  linux_desktop_settings.c  linux_notify.c  (+17 more)
(+613 files in other folders)
