[tool.poetry.scripts]
test = "scripts:test"

[tool.poetry]
name = smelly
version = 0.0.1
description = itReeks

[tool.ruff]
line-length = 160
target-version = 'py38'
select = ['E', 'F', 'I', 'RUF100']

[tool.ruff.per-file-ignores]
"smelly/options/types.py" = ["E501"]

[tool.black]
line-length = 160
target-version = ['py38']
skip-string-normalization = true
